<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/button3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="#222222">

                        <ImageView
                            android:id="@+id/btn_dlg_details_back"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="@drawable/previous"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"/>

                        <Components.TextViewFont
                            app:customFont="@string/font_default2"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/dialog_details_caption"
                            android:layout_gravity="center"
                            android:textSize="20sp"
                            android:textColor="#ffffff"
                            android:layout_weight="1"
                            android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="right"
                    android:layoutDirection="rtl"
                    android:orientation="vertical">

                    <Components.TextViewFont
                        app:customFont="@string/font_default2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_details_delivery"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:textSize="14sp"
                        android:textColor="@color/common_plus_signin_btn_text_light_default"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <Components.EditTextFont
                            android:id="@+id/edt_dlg_details_phone"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:hint="@string/dialog_details_deliverymobilehint"
                            android:layout_gravity="center"
                            android:padding="10dp"
                            android:inputType="number"
                            android:background="@color/common_action_bar_splitter"
                            android:textColor="@color/common_plus_signin_btn_text_light_default"
                            android:textColorHint="@color/common_plus_signin_btn_text_light_default"/>

                        <Components.EditTextFont
                            android:id="@+id/edt_dlg_details_name"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:hint="@string/dialog_details_deliverynamehint"
                            android:layout_gravity="center"
                            android:padding="10dp"
                            android:background="@color/common_action_bar_splitter"
                            android:textColor="@color/common_plus_signin_btn_text_light_default"
                            android:textColorHint="@color/common_plus_signin_btn_text_light_default"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp">

                        <Components.TextViewFont
                            app:customFont="@string/font_default2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dialog_details_deliverymobilenumber"
                            android:layout_gravity="left"
                            android:textSize="12sp"
                            android:textColor="@color/common_plus_signin_btn_text_light_default"/>

                        <Components.TextViewFont
                            app:customFont="@string/font_default2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dialog_details_deliverymobilestrings"
                            android:layout_gravity="left"
                            android:textSize="12sp"
                            android:textColor="@color/common_plus_signin_btn_text_light_default"/>

                    </LinearLayout>


                    <Components.TextViewFont
                        app:customFont="@string/font_default2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_details_deliveryaddresscaption"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="30dp"
                        android:textSize="14sp"
                        android:textColor="@color/common_plus_signin_btn_text_light_default"/>

                    <Components.EditTextFont
                        android:id="@+id/edt_dlg_details_address"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:hint="@string/dialog_details_deliveryaddresshint"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:background="@color/common_action_bar_splitter"
                        android:textColor="@color/common_plus_signin_btn_text_light_default"
                        android:textColorHint="@color/common_plus_signin_btn_text_light_default"/>


                    <Components.TextViewFont
                        app:customFont="@string/font_default2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_details_deliverydescriptioncaption"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="30dp"
                        android:textSize="14sp"
                        android:textColor="@color/common_plus_signin_btn_text_light_default"/>

                    <Components.EditTextFont
                        android:id="@+id/edt_dlg_details_description"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:hint="@string/dialog_details_deliverydescriptionhint"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:background="@color/common_action_bar_splitter"
                        android:textColor="@color/common_plus_signin_btn_text_light_default"
                        android:textColorHint="@color/common_plus_signin_btn_text_light_default"/>


                </LinearLayout>

                <Components.ButtonFont
                    android:id="@+id/btn_dlg_details_ok"
                    app:customFont="@string/font_default"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/dialog_details_confirmation"
                    android:background="@drawable/button1"
                    android:textSize="@dimen/button_font_size"
                    android:textColor="#ffffff"/>

        </LinearLayout>

</LinearLayout>