<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fragment_search_id"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="#222222">

        <ImageView
            android:id="@+id/btn_credit_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:src="@drawable/previous"/>


        <Components.TextViewFont
            app:customFont="@string/font_default2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fragment_credit_caption"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

        <ImageView
            android:id="@+id/btn_credit_history"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:src="@drawable/history"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="#fafafa"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp">
            </LinearLayout>

            <Components.TextViewFont
                android:id="@+id/txt_credit_amount"
                app:customFont="@string/font_default2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/fragment_credit_credit"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="#000000"/>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="#bbbbbb">
            </LinearLayout>

            <Components.TextViewFont
                app:customFont="@string/font_default2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/fragment_credit_creditstring"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#000000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#ebebeb">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:orientation="vertical">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/button3">

                <Components.TextViewFont
                    android:id="@+id/txt_credit_20000_toman"
                    app:customFont="@string/font_default2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/fragment_credit_2000toman"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:background="@color/common_action_bar_splitter"
                    android:orientation="vertical"/>

                <Components.TextViewFont
                    android:id="@+id/txt_credit_50000_toman"
                    app:customFont="@string/font_default2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/fragment_credit_5000toman"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="#000000"/>

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:background="@color/common_action_bar_splitter"
                    android:orientation="vertical"/>

                <Components.TextViewFont
                    android:id="@+id/txt_credit_100000_toman"
                    app:customFont="@string/font_default2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/fragment_credit_10000toman"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="#000000"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:background="@drawable/button3">

                    <Components.TextViewFont
                        app:customFont="@string/font_default2"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:text="@string/fragment_credit_toman"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textColor="#000000"/>

                    <Components.EditTextFont
                        android:id="@+id/edt_credit_value"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:textColor="#000000"
                        android:inputType="number"
                        android:textColorHint="@color/common_action_bar_splitter"
                        android:hint="@string/fragment_credit_tomanvaluehint"/>

                </LinearLayout>

            <Components.ButtonFont
                android:id="@+id/btn_credit_ok_increase"
                app:customFont="@string/font_default"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/button2"
                android:text="@string/fragment_credit_increasevredit"
                android:layout_gravity="bottom"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>